--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@ _wq.push({ id: 'a4cr5gh3l1', onReady: function(video) {
                         <div class="formation-new-info-box">
                             <p class="f-paragraph-regular f-text-weight-medium center">Victor huftier</p>
                             <div class="small-text _13px white">Make millions with AI</div>
-                        </div><img src="media/pngtree-vector-25d-brain-ai-image_2252966.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/pngtree-vector-25d-brain-ai-image_2252966.png 500w,media/pngtree-vector-25d-brain-ai-image_2252966.png 506w"
+                        </div><img src="media/—Pngtree—artificial intelligence geometry circular shape_3962670.png" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 991px) 80px, 110px" srcset="media/—Pngtree—artificial intelligence geometry circular shape_3962670.png 500w,media/—Pngtree—artificial intelligence geometry circular shape_3962670.png 506w"
                             alt="" class="formation-book" />
                         <div data-w-id="8d619bdd-a1da-64e4-34cf-69dc3f268f62" class="formation-new-hover">
                             <div class="badge populaire">AI </div>
